--- a/CSManagement/CSManagement/Views/Shared/_Header.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Header.cshtml
@@ -1,4 +1,36 @@
-﻿<header class="main-header">
+﻿@using Microsoft.Ajax.Utilities
+<header class="main-header">
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        .topnav {
+            background-color: #333;
+        }
+
+            .topnav a {
+                color: #f2f2f2;
+                text-align: center;
+                padding: 14px 16px;
+            }
+
+                .topnav a:hover {
+                    background-color: #ddd;
+                    color: blue;
+                }
+
+                .topnav a.active {
+                    background-color: #4CAF50;
+                    color: white;
+                }
+
+        .topnav-right {
+            float: right;
+        }
+    </style>
+
     @* BEGIN Logo *@
     <a href="@Url.Action("Index", "Home")" class="logo">
         @* Mini logo for sidebar 50x50 pixels *@
@@ -8,38 +40,54 @@
     </a>
     @* END Logo *@
     @* BEGIN Header *@
-    <nav class="navbar navbar-static-top" role="navigation">
+    <nav class="navbar navbar-static-top topnav" role="navigation">
         <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
             <span class="sr-only">Toggle navigation</span>
         </a>
-        <div class="navbar-custom-menu">
-            <ul class="nav navbar-nav">
-                <li class="dropdown user user-menu">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="~/img/icons8-cat-profile-64.png" class="user-image" alt="User Image">
-                        <span class="hidden-xs">Yanee Wongtanhuad</span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li class="user-header">
-                            <img src="~/img/icons8-cat-profile-64.png" class="img-circle" alt="User Image">
+        @{
+            if (Session["UserID"] != null)
+            {
+                <div class="navbar-custom-menu">
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown user user-menu">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <img src="~/img/icons8-cat-profile-64.png" class="user-image" alt="User Image">
+                                <span class="hidden-xs">@Session["UserName"].ToString()</span>
+                            </a>
 
-                            <p>
-                                Yanee Wongtanhuad
-                                <small>Member since Nov. 2012</small>
-                            </p>
-                        </li>
-                        
-                        <li class="user-footer">
-                            <div class="pull-left">
-                                <a href="#" class="btn btn-default btn-flat">Profile</a>
-                            </div>
-                            <div class="pull-right">
-                                <a href="#" class="btn btn-default btn-flat">Sign out</a>
-                            </div>
+                            <ul class="dropdown-menu">
+                                <li class="user-header">
+                                    <img src="~/img/icons8-cat-profile-64.png" class="img-circle" alt="User Image">
+
+                                    <p>
+                                        @Session["UserName"].ToString()
+                                        <small>Member since Nov. 2012</small>
+                                    </p>
+                                </li>
+
+                                <li class="user-footer">
+                                    <div class="pull-left">
+                                        <a href="#" class="btn btn-default btn-flat">Profile</a>
+                                    </div>
+                                    <div class="pull-right">
+                                        <a href='@Url.Action("Logout", "logins")' class="btn btn-default btn-flat">Sign out</a>
+                                    </div>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
-                </li>
-            </ul>
-        </div>
+                </div>
+            }
+
+            else
+            {
+                <div class="topnav-right">
+                    <a href="" class="btn btn-blue" data-toggle="modal" data-target="#modalLRForm">
+                        เข้าสู่ระบบ/สมัครสมาชิก
+                    </a>
+                </div>
+            }
+
+        }
     </nav>
 </header>
