--- a/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
@@ -18,17 +18,17 @@
         <li class="@Url.IsLinkActive("Index", "Home")">
             <a href="@Url.Action("Index", "Home")"><i class="fa fa-home"></i> <span>หน้าหลัก</span></a>
         </li>
-        <li class="@Url.IsLinkActive("Index", "Student")">
-            <a href="@Url.Action("Index", "Student")"><i class="fa fa-user"></i> <span>ข้อมูลนักศึกษา</span></a>
+        <li class="@Url.IsLinkActive("Index", "Students")">
+            <a href="@Url.Action("Index", "Students")"><i class="fa fa-user"></i> <span>ข้อมูลนักศึกษา</span></a>
         </li>
-        <li class="@Url.IsLinkActive("Index", "Student")">
-            <a href="@Url.Action("Index", "Student")"><i class="fa fa-graduation-cap"></i> <span>ข้อมูลปริญญานิพนธ์</span></a>
+        <li class="@Url.IsLinkActive("Index", "Students")">
+            <a href="@Url.Action("Index", "Students")"><i class="fa fa-graduation-cap"></i> <span>ข้อมูลปริญญานิพนธ์</span></a>
         </li>
-        <li class="@Url.IsLinkActive("Index", "Student")">
-            <a href="@Url.Action("Index", "Student")"><i class="fa fa-bullhorn"></i> <span>ข้อมูลประชาสัมพันธ์</span></a>
+        <li class="@Url.IsLinkActive("Index", "Students")">
+            <a href="@Url.Action("Index", "Students")"><i class="fa fa-bullhorn"></i> <span>ข้อมูลประชาสัมพันธ์</span></a>
         </li>
-        <li class="@Url.IsLinkActive("Index", "Student")">
-            <a href="@Url.Action("Index", "Student")"><i class="fa fa-cube"></i> <span>ข้อมูลครุภัณฑ์</span></a>
+        <li class="@Url.IsLinkActive("Index", "Students")">
+            <a href="@Url.Action("Index", "Students")"><i class="fa fa-cube"></i> <span>ข้อมูลครุภัณฑ์</span></a>
         </li>
         <li class="treeview">
             <a href="#">
