เปลี่ยนdb+สร้างนักเรียนได้

--- a/CSManagement/CSManagement/Views/Student/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Student/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Edit";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Edit</h2>
@@ -118,3 +119,7 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
