--- a/CSManagement/CSManagement/Views/Shared/_Layout.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>
         @if (!string.IsNullOrWhiteSpace(ViewBag.Title))
