--- a/CSManagement/CSManagement/Views/Student/Create.cshtml
+++ b/CSManagement/CSManagement/Views/Student/Create.cshtml
@@ -21,28 +21,30 @@
             <div class="box-body">
                 <div class="row">
                     <div class="form-group col-md-3">
-                        @Html.LabelFor(model => model.Stu_ID, "รหัสนักศึกษา", htmlAttributes: new { @class = "control-label" })
+                        @Html.LabelFor(model => model.Stu_ID, htmlAttributes: new { @class = "control-label" })
                         @Html.EditorFor(model => model.Stu_ID, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Stu_ID, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group col-md-3">
-                        @Html.LabelFor(model => model.Stu_Title, "คำนำหน้า", htmlAttributes: new { @class = "control-label" })
-                        <select class="form-control select2" style="width: 100%;">
-                            <option selected="selected">เลือกคำนำหน้า</option>
-                            <option>นาย</option>
-                            <option>นางสาว</option>
-                        </select>
+                        @Html.LabelFor(model => model.Stu_Title, htmlAttributes: new { @class = "control-label" })
+                        @Html.DropDownListFor(model => model.Stu_Title, new List<SelectListItem>()
+                        {
+                            new SelectListItem() { Text = "นาย", Value = "นาย" },
+                            new SelectListItem() { Text = "นาง", Value = "นาง" },
+                            new SelectListItem() { Text = "นางสาว", Value = "นางสาว"}
+                        }, "โปรดเลือกคำนำหน้าชื่อ", new { @id = "Stu_Sex", @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Stu_Title, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group col-md-3">
-                        @Html.LabelFor(model => model.Stu_Name, "ชื่อ", htmlAttributes: new { @class = "control-label" })
+                        @Html.LabelFor(model => model.Stu_Name, htmlAttributes: new { @class = "control-label" })
                         @Html.EditorFor(model => model.Stu_Name, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Stu_Name, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group col-md-3">
-                        @Html.LabelFor(model => model.Stu_Surname, "นามสกุล", htmlAttributes: new { @class = "control-label" })
+                        @Html.LabelFor(model => model.Stu_Surname,  htmlAttributes: new { @class = "control-label" })
                         @Html.EditorFor(model => model.Stu_Surname, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Stu_Surname, "", new { @class = "text-danger" })
                     </div>
@@ -50,23 +52,18 @@
 
                 <div class="row">
                     <div class="form-group col-md-2">
-                        @Html.LabelFor(model => model.Stu_Sex, "เพศ", htmlAttributes: new { @class = "control-label" })
+                        @Html.LabelFor(model => model.Stu_Sex,  htmlAttributes: new { @class = "control-label" })
                         <br />
-                        <div class="radio">
-                            <label>
-                                ชาย
-                                <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3" checked>
-                            </label>
-                            <label>
-                                หญิง
-                                <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3" checked>
-                            </label>
-                        </div>
-
+                            @Html.DropDownListFor(model => model.Stu_Sex, new List<SelectListItem>()
+                            {
+                                new SelectListItem() { Text = "เพศชาย", Value = "True" },
+                                new SelectListItem() { Text = "เพศหญิง", Value = "False"}
+                            }, "โปรดเลือกเพศ", new { @id = "Stu_Sex", @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.Stu_Sex, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group col-md-3">
-                        @Html.LabelFor(model => model.Stu_Birthday, "วัน/เดือน/ปีเกิด", htmlAttributes: new { @class = "control-label" })<div class="input-group">
+                        @Html.LabelFor(model => model.Stu_Birthday,  htmlAttributes: new { @class = "control-label" })<div class="input-group">
                             <div class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                             </div>
@@ -83,7 +80,7 @@
                     </div>
 
                     <div class="form-group  col-md-3">
-                        @Html.LabelFor(model => model.Stu_Tel, "เบอร์โทรศัพท์", htmlAttributes: new { @class = "control-label" })
+                        @Html.LabelFor(model => model.Stu_Tel,  htmlAttributes: new { @class = "control-label" })
                         <div class="input-group">
                             <div class="input-group-addon">
                                 <i class="fa fa-phone"></i>
@@ -95,7 +92,7 @@
 
                 <div class="row">
                     <div class="form-group col-md-12">
-                        @Html.LabelFor(model => model.Stu_Address, "ที่อยู่", htmlAttributes: new { @class = "control-label" })
+                        @Html.LabelFor(model => model.Stu_Address,  htmlAttributes: new { @class = "control-label" })
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-home"></i></span>
                             <input type="text" class="form-control">
@@ -105,7 +102,7 @@
 
                 <div class="row">
                     <div class="form-group col-md-4">
-                        @Html.LabelFor(model => model.Stu_School, "โรงเรียนเดิม", htmlAttributes: new { @class = "control-label" })
+                        @Html.LabelFor(model => model.Stu_School,  htmlAttributes: new { @class = "control-label" })
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-university"></i></span>
                             @Html.DropDownList("Stu_School", null, htmlAttributes: new { @class = "form-control" })
@@ -114,7 +111,7 @@
                     </div>
 
                     <div class="form-group col-md-4">
-                        @Html.LabelFor(model => model.Stu_OldEdu, "วุฒิการศึกษา", htmlAttributes: new { @class = "control-label" })
+                        @Html.LabelFor(model => model.Stu_OldEdu,  htmlAttributes: new { @class = "control-label" })
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-graduation-cap"></i></span>
                             <select class="form-control select2" style="width: 100%;">
@@ -127,7 +124,7 @@
                     </div>
 
                     <div class="form-group col-md-4">
-                        @Html.LabelFor(model => model.Stu_Img, "รูปภาพประจำตัว", htmlAttributes: new { @class = "control-label" })
+                        @Html.LabelFor(model => model.Stu_Img, htmlAttributes: new { @class = "control-label" })
                         <input type="file" id="exampleInputFile">
                     </div>
                 </div>
