--- a/CSManagement/CSManagement/Views/Students/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Students/Edit.cshtml
@@ -103,7 +103,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Stu_Img, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Stu_Img, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Stu_Img, new { htmlAttributes = new { @class = "form-control",@type="file" } })
                 @Html.ValidationMessageFor(model => model.Stu_Img, "", new { @class = "text-danger" })
             </div>
         </div>
