--- a/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
@@ -21,14 +21,14 @@
         <li class="@Url.IsLinkActive("Index", "Student")">
             <a href="@Url.Action("Index", "Student")"><i class="fa fa-user"></i> <span>ข้อมูลนักศึกษา</span></a>
         </li>
-        <li class="@Url.IsLinkActive("Index", "Student")">
-            <a href="@Url.Action("Index", "Student")"><i class="fa fa-graduation-cap"></i> <span>ข้อมูลปริญญานิพนธ์</span></a>
+        <li>
+            <a href="#"><i class="fa fa-graduation-cap"></i> <span>ข้อมูลปริญญานิพนธ์</span></a>
         </li>
-        <li class="@Url.IsLinkActive("Index", "Student")">
-            <a href="@Url.Action("Index", "Student")"><i class="fa fa-bullhorn"></i> <span>ข้อมูลประชาสัมพันธ์</span></a>
+        <li>
+            <a href="#"><i class="fa fa-bullhorn"></i> <span>ข้อมูลประชาสัมพันธ์</span></a>
         </li>
-        <li class="@Url.IsLinkActive("Index", "Student")">
-            <a href="@Url.Action("Index", "Student")"><i class="fa fa-cube"></i> <span>ข้อมูลครุภัณฑ์</span></a>
+        <li>
+            <a href="#"><i class="fa fa-cube"></i> <span>ข้อมูลครุภัณฑ์</span></a>
         </li>
         <li class="treeview">
             <a href="#">
