--- a/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
@@ -27,8 +27,8 @@
         <li>
             <a href="#"><i class="fa fa-bullhorn"></i> <span>ข้อมูลประชาสัมพันธ์</span></a>
         </li>
-        <li>
-            <a href="#"><i class="fa fa-cube"></i> <span>ข้อมูลครุภัณฑ์</span></a>
+        <li class="@Url.IsLinkActive("Index", "ComputerEquipments")">
+            <a href="@Url.Action("Index", "ComputerEquipments")"><i class="fa fa-user"></i> <span>ข้อมูลครุภัณฑ์</span></a>
         </li>
         <li class="treeview">
             <a href="#">
