--- a/CSManagement/CSManagement/Views/Students/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Students/Edit.cshtml
@@ -5,48 +5,31 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
-
-
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Students", FormMethod.Post, new { enctype = "multipart/form-data", accept_charset = "utf-8" }))
 {
     @Html.AntiForgeryToken()
+    
+    <div class="form-horizontal">
+        <h4>Student</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Stu_ID)
 
-    <section class="content">
-        <div class="box box-default">
-            <div class="box-header with-border">
-                <h3 class="box-title">เพิ่มข้อมูลนักศึกษา</h3>
-
-                <div class="box-tools pull-right">
-                    <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                    <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-remove"></i></button>
-                </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Stu_Title, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Stu_Title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Stu_Title, "", new { @class = "text-danger" })
             </div>
-            <!-- /.box-header -->
-            <div class="box-body">
-                <div class="row">
-                    <div class="form-group col-md-3">
-                        @Html.LabelFor(model => model.Stu_ID, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Stu_ID, new { htmlAttributes = new { @class = "form-control",@ReadOnly = true } })
-                        @Html.ValidationMessageFor(model => model.Stu_ID, "", new { @class = "text-danger" })
-                    </div>
+        </div>
 
-                    <div class="form-group col-md-3">
-                        @Html.LabelFor(model => model.Stu_Title, htmlAttributes: new { @class = "control-label" })
-                        @Html.DropDownListFor(model => model.Stu_Title, new List<SelectListItem>()
-                        {
-                            new SelectListItem() { Text = "นาย", Value = "นาย" },
-                            new SelectListItem() { Text = "นาง", Value = "นาง" },
-                            new SelectListItem() { Text = "นางสาว", Value = "นางสาว"}
-                        }, "เลือกคำนำหน้าชื่อ", new { @id = "Stu_Sex", @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.Stu_Title, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group col-md-3">
-                        @Html.LabelFor(model => model.Stu_Name, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Stu_Name, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Stu_Name, "", new { @class = "text-danger" })
-                    </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Stu_Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Stu_Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Stu_Name, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
                     <div class="form-group col-md-3">
                         @Html.LabelFor(model => model.Stu_Surname, htmlAttributes: new { @class = "control-label" })
@@ -133,25 +116,22 @@
                         @Html.ValidationMessageFor(model => model.Stu_OldEdu, "", new { @class = "text-danger" })
                     </div>
 
-                    <div class="form-group col-md-4">
-                        @Html.LabelFor(model => model.Stu_Img, htmlAttributes: new { @class = "control-label" })
-                        <input type="file" id="file" name="file">
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-block btn-success col-md-4">บันทึกข้อมูล</button>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Stu_Img, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Stu_Img, new { htmlAttributes = new { @class = "form-control",@type="file" } })
+                @Html.ValidationMessageFor(model => model.Stu_Img, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="box-footer">
-            หมายเหตุ : กรุณาตรวจสอบข้อมูลให้ถูกต้องก่อนทำการกดบันทึก
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
         </div>
-    </section>
-
+    </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
