--- a/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
@@ -14,36 +14,52 @@
         </form>
         @* END Search *@
         @* BEGIN Menu *@
-    <ul class="sidebar-menu" data-widget="tree">
-        <li class="@Url.IsLinkActive("Index", "Home")">
-            <a href="@Url.Action("Index", "Home")"><i class="fa fa-home"></i> <span>หน้าหลัก</span></a>
-        </li>
-        <li class="@Url.IsLinkActive("Index", "Students")">
-            <a href="@Url.Action("Index", "Students")"><i class="fa fa-user"></i> <span>ข้อมูลนักศึกษา</span></a>
-        </li>
-        <li>
-            <a href="#"><i class="fa fa-graduation-cap"></i> <span>ข้อมูลปริญญานิพนธ์</span></a>
-        </li>
-        <li>
-            <a href="#"><i class="fa fa-bullhorn"></i> <span>ข้อมูลประชาสัมพันธ์</span></a>
-        </li>
-        <li class="@Url.IsLinkActive("Index", "ComputerEquipments")">
-            <a href="@Url.Action("Index", "ComputerEquipments")"><i class="fa fa-user"></i> <span>ข้อมูลครุภัณฑ์</span></a>
-        </li>
-        <li class="treeview">
-            <a href="#">
-                <i class="fa fa-calendar-check-o"></i> <span>รายงานข้อมูล</span>
-                <span class="pull-right-container">
-                    <i class="fa fa-angle-left pull-right"></i>
-                </span>
-            </a>
-            <ul class="treeview-menu">
-                <li><a href="#">ข้อมูลนักศึกษา</a></li>
-                <li><a href="#">โรงเรียนเดิมของนักศึกษา</a></li>
-                <li><a href="#">ข้อมูลศิษย์เก่า</a></li>
-            </ul>
-        </li>
-    </ul>
+        <ul class="sidebar-menu" data-widget="tree">
+            <li class="@Url.IsLinkActive("Index", "Home")">
+                <a href="@Url.Action("Index", "Home")"><i class="fa fa-home"></i> <span>หน้าหลัก</span></a>
+            </li>
+            <li class="@Url.IsLinkActive("Index", "Students")">
+                <a href="@Url.Action("Index", "Students")"><i class="fa fa-user"></i> <span>ข้อมูลนักศึกษา</span></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa fa-graduation-cap"></i> <span>ข้อมูลปริญญานิพนธ์</span></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa fa-bullhorn"></i> <span>ข้อมูลประชาสัมพันธ์</span></a>
+            </li>
+            <li class="treeview">
+                <a href="#">
+                    <i class="fa fa-calendar-check-o"></i> <span>ข้อมูลครุภัณฑ์</span>
+                    <span class="pull-right-container">
+                        <i class="fa fa-angle-left pull-right"></i>
+                    </span>
+                </a>
+                <ul class="treeview-menu">
+                    <li>
+                        <a href="@Url.Action("Index", "ComputerEquipments")"><i class="fa fa-user"></i> <span>ข้อมูลครุภัณฑ์</span></a>
+                    </li>
+                    <li>
+                        <a href="@Url.Action("Index", "Disposes")"><i class="fa fa-user"></i> <span>การจำหน่าย</span></a>
+                    </li>
+                    <li>
+                        <a href="@Url.Action("Index", "CESups")"><i class="fa fa-address-book"></i> <span>ครุภัณฑ์ทั้งหมด</span></a>
+                    </li>
+                </ul>
+            </li>
+            <li class="treeview">
+                <a href="#">
+                    <i class="fa fa-calendar-check-o"></i> <span>รายงานข้อมูล</span>
+                    <span class="pull-right-container">
+                        <i class="fa fa-angle-left pull-right"></i>
+                    </span>
+                </a>
+                <ul class="treeview-menu">
+                    <li><a href="#">ข้อมูลนักศึกษา</a></li>
+                    <li><a href="#">โรงเรียนเดิมของนักศึกษา</a></li>
+                    <li><a href="#">ข้อมูลศิษย์เก่า</a></li>
+                </ul>
+            </li>
+        </ul>
         @* END Menu *@
     </section>
 </aside>
