แก้ไข Home/Index

--- a/CSManagement/CSManagement/Views/CESups/Index.cshtml
+++ b/CSManagement/CSManagement/Views/CESups/Index.cshtml
@@ -13,7 +13,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.CE_ATNO)
+            @Html.DisplayNameFor(model => model.ComputerEquipment.CE_NO)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.CESUB_NO)
@@ -31,7 +31,7 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.CE_ATNO)
+                @Html.DisplayFor(modelItem => item.ComputerEquipment.CE_NO)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CESUB_NO)
