--- a/CSManagement/CSManagement/Views/ComputerEquipments/Index.cshtml
+++ b/CSManagement/CSManagement/Views/ComputerEquipments/Index.cshtml
@@ -80,19 +80,19 @@
             <td>
                 @if (item.CE_Status == 1)
                 {
-                    <span>
+                    <span style="color:green">
                         อยู่ในระบบ
                     </span>
                 }
                 else if (item.CE_Status == 2)
                 {
-                    <span>
+                    <span style="color:red">
                         จำหน่ายแล้ว
                     </span>
                 }
                 else if (item.CE_Status == 3)
                 {
-                    <span>
+                    <span style="color:blue">
                         รอจำหน่าย
                     </span>
                 }
