--- a/CSManagement/CSManagement/Views/CESups/Index.cshtml
+++ b/CSManagement/CSManagement/Views/CESups/Index.cshtml
@@ -42,19 +42,19 @@
             <td>
                 @if (item.CESUB_Status == 1)
                 {
-                    <span>
+                    <span style="color:green">
                         อยู่ในระบบ
                     </span>
                 }
                 else if (item.CESUB_Status == 2)
                 {
-                    <span>
+                    <span style="color:red">
                         จำหน่ายแล้ว
                     </span>
                 }
                 else if (item.CESUB_Status == 3)
                 {
-                    <span>
+                    <span style="color:blue">
                         รอจำหน่าย
                     </span>
                 }
